--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,22 +19,21 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Xcode
-      uses: maxim-lobanov/setup-xcode@v3
+      uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: "16.1"
+        xcode-version: 'latest-stable'
 
     - name: Install dependencies
       run: |
-        # Se usar CocoaPods
         if [ -f "Podfile" ]; then
           pod install
         fi
 
     - name: Build app
-      run: xcodebuild -scheme "SeedsProsperity" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=15.6' build
+      run: xcodebuild -scheme "SeedsProsperity" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.0' build
 
     - name: Run tests
-      run: xcodebuild test -scheme "SeedsProsperity" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=15.6'
+      run: xcodebuild test -scheme "SeedsProsperity" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.0'
